deploy: 3cc45207f2b0cfffd345739a9500ef2c825ddff3

--- a/call-values.html
+++ b/call-values.html
@@ -3,14 +3,13 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Displaying the value of arguments and return value of a call - REVEN API Cookbook</title>
+        <title>Displaying the value of arguments and return value of a call - Reven API Cookbook</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
         <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="bulma.css">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
@@ -76,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html" class="active"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values or structs from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html" class="active"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li><li class="chapter-item expanded "><a href="handles.html"><strong aria-hidden="true">18.</strong> Accessing handles</a></li><li class="chapter-item expanded "><a href="memory-ranges.html"><strong aria-hidden="true">19.</strong> Managing ranges of memory</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -105,11 +104,11 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">REVEN API Cookbook</h1>
+                    <h1 class="menu-title">Reven API Cookbook</h1>
 
                     <div class="right-buttons">
-                        <a href="https://www.tetrane.com" title="Go to main site" aria-label="Go to main site">
-                            <img src=".//static/logo.png" alt="Tetrane logo" style="width:28px;height:28px;vertical-align:middle"></i>
+                        <a href="https://www.eshard.com" title="Go to eShard" aria-label="Go to eShard">
+                            <img src=".//static/eshard_icon.svg" alt="eShard logo" style="width:40px;height:40px;vertical-align:middle"></i>
                         </a>
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
@@ -143,7 +142,7 @@
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.10.0</span>
     </div>
 </div>
@@ -185,13 +184,38 @@
 </div>
 </div>
 <h2 id="when-the-prototype-is-known"><a class="header" href="#when-the-prototype-is-known">When the prototype is known</a></h2>
-<h3 id="windows-64-bit"><a class="header" href="#windows-64-bit">Windows 64-bit</a></h3>
-<p>Use the <code>Ms64</code> calling convention.</p>
+<h3 id="automatically-detecting-the-calling-convention-from-the-os"><a class="header" href="#automatically-detecting-the-calling-convention-from-the-os">Automatically detecting the calling convention from the OS</a></h3>
+<div class="bulma">
+<div class="field is-grouped is-grouped-multiline">
+<div class="control">
+    <div class="tags has-addons">
+        <span class="tag is-dark">Reven</span>
+        <span class="tag is-info">v2.12.0</span>
+    </div>
+</div>
+</div>
+</div>
+<pre><code class="language-py">from typing import Optional
+
+
+def auto_calling_convention(
+    server: reven2.RevenServer,
+) -&gt; Optional[reven2.preview.prototypes.callconv_helper.CallConvHelper]:
+    prototypes = reven2.preview.prototypes.RevenPrototypes(server)
+    if server.ossi.os().architecture != reven2.ossi.Architecture.X64:
+        return None
+    if server.ossi.os().family == reven2.ossi.OsFamily.Windows:
+        return prototypes.calling_conventions.Ms64
+    elif server.ossi.os().family == reven2.ossi.OsFamily.Linux:
+        return prototypes.calling_conventions.Sysv64
+    return None
+</code></pre>
+<h3 id="windows-64-bit-example"><a class="header" href="#windows-64-bit-example">Windows 64-bit example</a></h3>
 <pre><code class="language-py">call_tr = tr.step_out(is_forward=False)
 import reven2.preview.prototypes
 prototypes = reven2.preview.prototypes.RevenPrototypes(server)
-call_conv = prototypes.calling_conventions.Ms64
-prototype = &quot;char * __cdecl OaGetEnv(char const *)&quot;
+call_conv = auto_calling_convention(server)
+prototype = &quot;char * __cdecl OaGetEnv(char const *);&quot;
 f = prototypes.parse_one_function(prototype, call_conv)
 call = f.call_site_values(call_tr)
 call.arg_n(0)
@@ -201,12 +225,12 @@ call.ret()
 <pre><code class="language-py">'OACACHEPARAMS'
 0
 </code></pre>
-<h3 id="linux-64-bit"><a class="header" href="#linux-64-bit">Linux 64-bit</a></h3>
+<h3 id="linux-64-bit-example"><a class="header" href="#linux-64-bit-example">Linux 64-bit example</a></h3>
 <p>Use the <code>Sysv64</code> calling convention.</p>
 <pre><code class="language-py">call_tr = tr.step_out(is_forward=False)
 import reven2.preview.prototypes
 prototypes = reven2.preview.prototypes.RevenPrototypes(server)
-call_conv = prototypes.calling_conventions.Sysv64
+call_conv = auto_calling_convention(server)
 prototype = &quot;struct FILE; FILE* fopen64(const char *filename, const char *mode);&quot;
 f = prototypes.parse_one_function(prototype, call_conv)
 call = f.call_site_values(call_tr)
