--- a/instruction-semantics.html
+++ b/instruction-semantics.html
@@ -3,14 +3,13 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Finding more about the semantics of an instruction - REVEN API Cookbook</title>
+        <title>Finding more about the semantics of an instruction - Reven API Cookbook</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
         <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="bulma.css">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
@@ -76,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html" class="active"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values or structs from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html" class="active"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li><li class="chapter-item expanded "><a href="handles.html"><strong aria-hidden="true">18.</strong> Accessing handles</a></li><li class="chapter-item expanded "><a href="memory-ranges.html"><strong aria-hidden="true">19.</strong> Managing ranges of memory</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -105,11 +104,11 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">REVEN API Cookbook</h1>
+                    <h1 class="menu-title">Reven API Cookbook</h1>
 
                     <div class="right-buttons">
-                        <a href="https://www.tetrane.com" title="Go to main site" aria-label="Go to main site">
-                            <img src=".//static/logo.png" alt="Tetrane logo" style="width:28px;height:28px;vertical-align:middle"></i>
+                        <a href="https://www.eshard.com" title="Go to eShard" aria-label="Go to eShard">
+                            <img src=".//static/eshard_icon.svg" alt="eShard logo" style="width:40px;height:40px;vertical-align:middle"></i>
                         </a>
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
@@ -272,12 +271,12 @@ class Disassembler:
 
         return DisassembledInstruction(tr, cs_insn)
 </code></pre>
-<h2 id="disassembling-reven-instructions"><a class="header" href="#disassembling-reven-instructions">Disassembling REVEN instructions</a></h2>
+<h2 id="disassembling-reven-instructions"><a class="header" href="#disassembling-reven-instructions">Disassembling Reven instructions</a></h2>
 <div class="bulma">
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.10.0</span>
     </div>
 </div>
@@ -300,7 +299,7 @@ insn.capstone_instruction
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.2.0</span>
     </div>
 </div>
@@ -317,12 +316,12 @@ insn.capstone_instruction
 <p>Sample output:</p>
 <pre><code>'0xfffff8024cfacfb0'
 </code></pre>
-<h2 id="convert-capstone-flags-to-reven-register-flags"><a class="header" href="#convert-capstone-flags-to-reven-register-flags">Convert capstone flags to REVEN register flags</a></h2>
+<h2 id="convert-capstone-flags-to-reven-register-flags"><a class="header" href="#convert-capstone-flags-to-reven-register-flags">Convert capstone flags to Reven register flags</a></h2>
 <div class="bulma">
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.2.0</span>
     </div>
 </div>
@@ -362,6 +361,9 @@ for flag, reg in test_eflags.items():
                             <a rel="prev" href="bookmarks.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+                            <a rel="next" href="handles.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -370,6 +372,9 @@ for flag, reg in test_eflags.items():
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
                     <a rel="prev" href="bookmarks.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
+                    </a>
+                    <a rel="next" href="handles.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
