--- a/memory-ranges.html
+++ b/memory-ranges.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Focusing on a portion of the trace - Reven API Cookbook</title>
+        <title>Managing ranges of memory - Reven API Cookbook</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values or structs from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html" class="active"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li><li class="chapter-item expanded "><a href="handles.html"><strong aria-hidden="true">18.</strong> Accessing handles</a></li><li class="chapter-item expanded "><a href="memory-ranges.html"><strong aria-hidden="true">19.</strong> Managing ranges of memory</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values or structs from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li><li class="chapter-item expanded "><a href="handles.html"><strong aria-hidden="true">18.</strong> Accessing handles</a></li><li class="chapter-item expanded "><a href="memory-ranges.html" class="active"><strong aria-hidden="true">19.</strong> Managing ranges of memory</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -137,40 +137,102 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="focusing-on-a-portion-of-the-trace"><a class="header" href="#focusing-on-a-portion-of-the-trace">Focusing on a portion of the trace</a></h1>
-<h2 id="filtering-on-processesring"><a class="header" href="#filtering-on-processesring">Filtering on processes/ring</a></h2>
+                        <h1 id="managing-ranges-of-memory"><a class="header" href="#managing-ranges-of-memory">Managing ranges of memory</a></h1>
 <div class="bulma">
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
         <span class="tag is-dark">Reven</span>
-        <span class="tag is-info">v2.10.0</span>
+        <span class="tag is-info">v2.11.0</span>
     </div>
 </div>
 </div>
-<pre><code class="language-py">processes = list(server.ossi.executed_processes(&quot;chat&quot;))
-for ctx_range in server.trace.filter(processes, reven2.filter.RingPolicy.R3Only):
-    first_context = next(iter(ctx_range))
-    print(f&quot;{ctx_range}: {first_context.ossi.process()}\t| {first_context.ossi.location()}&quot;)
+</div>
+<p>A range of memory is a very common concept. Storing, updating, merging or iterating on such ranges are operations that are likely to be necessary to users of the Reven API. </p>
+<p>Reven provides a &quot;canonical&quot; implementation in the API that spares users from having to deal with multiple reimplementations.</p>
+<h2 id="creating--updating-memory-ranges"><a class="header" href="#creating--updating-memory-ranges">Creating &amp; updating memory ranges</a></h2>
+<pre><code class="language-py">import reven2.memory_range as mr
+
+# First range
+r1 = mr.MemoryRange(reven2.address.LogicalAddress(0x1000), 0x1000)
+# This range will overlap with previous one
+r2 = mr.MemoryRange(reven2.address.LogicalAddress(0x1500), 0x1000)
+# This range does not overlap
+r3 = mr.MemoryRange(reven2.address.LogicalAddress(0x5000), 0x1000)
+
+print(r1)
+# Union is non-empty
+print(r1.union(r2))
+# Union is empty
+print(r1.union(r2).union(r3))
 </code></pre>
 <p>Sample output:</p>
-<pre><code>[Context before #5662909, Context before #5669296]: chat_client.exe (2816)	| ntdll!ZwDeviceIoControlFile+0x14
-[Context before #5670173, Context before #5671124]: chat_client.exe (2816)	| ntdll!NtSetIoCompletion+0x14
-[Context before #5672523, Context before #5673027]: chat_client.exe (2816)	| ntdll!NtRemoveIoCompletionEx+0x14
-[Context before #5678502, Context before #5678522]: chat_client.exe (2816)	| chat_client!&lt;tokio_timer::clock::clock::Clock as tokio_timer::timer::now::Now&gt;::now+0x24
-[Context before #5678723, Context before #5679392]: chat_client.exe (2816)	| ntdll!ZwQueryPerformanceCounter+0x14
-...
+<pre><code>[ds:0x1000; 4096]
+[ds:0x1000; 5376]
+None
+</code></pre>
+<h2 id="translating-a-range-of-virtual-addresses"><a class="header" href="#translating-a-range-of-virtual-addresses">Translating a range of virtual addresses</a></h2>
+<p>Users might need to access the physical addresses of a buffer. However, a range of memory may be mapped onto non-contiguous physical pages, rendering the conversion error-prone.</p>
+<p>The <code>MemoryRange</code> object offers a translation method that is guaranteed to be correct.</p>
+<pre><code class="language-py">virtual_range = mr.MemoryRange(reven2.address.LogicalAddress(0x10000), 0x2000)
+for phy in virtual_range.translate(ctx): print(phy)
+</code></pre>
+<p>Sample output:</p>
+<pre><code>[phy:0x59ce000; 4096]
+[phy:0x764f000; 4096]
+</code></pre>
+<div class="bulma">
+<div class="message is-note">
+    <div class="message-header">
+      This is the only recommended path
+    </div>
+<div class="message-body content">
+<p>
+    As mentioned above, it is easy to get the translation wrong: while translating a virtual address into physical address is valid, translating a whole buffer is more complex. Please use the MemoryRange object for this purpose.
+</p>
+</div>
+</div>
+</div>
+<h2 id="working-with-mulitple-ranges"><a class="header" href="#working-with-mulitple-ranges">Working with mulitple ranges</a></h2>
+<p>The API provides object to manage mutiple ranges, depending on the situation</p>
+<h3 id="set-of-ranges"><a class="header" href="#set-of-ranges">Set of ranges</a></h3>
+<pre><code class="language-py"># First range
+r1 = mr.MemoryRange(reven2.address.LogicalAddress(0x1000), 0x1000)
+# This range will overlap with previous one
+r2 = mr.MemoryRange(reven2.address.LogicalAddress(0x1500), 0x1000)
+# This range does not overlap
+r3 = mr.MemoryRange(reven2.address.LogicalAddress(0x5000), 0x1000)
+
+# Range that overlap are merged
+s = mr.MemoryRangeSet([r1, r2, r3])
+for r in s: print(r)
+</code></pre>
+<p>Sample output:</p>
+<pre><code>[ds:0x1000; 5376]
+[ds:0x5000; 4096]
+</code></pre>
+<h3 id="map-of-ranges"><a class="header" href="#map-of-ranges">Map of ranges</a></h3>
+<p>Maps of ranges are useful to associate data with these memory ranges. For example, you might want to associate buffers with a particular named source.</p>
+<pre><code class="language-py">mem_map = mr.MemoryRangeMap(items=((r1, &quot;from r1&quot;), (r2, &quot;from r2&quot;), (r3, &quot;from r3&quot;)),
+                            # Do not handle subtraction:
+                            subtract=lambda a: None,        
+                            # Concatenate strings on merge:
+                            merge=lambda a, b: a + &quot;, &quot; + b)
+for r, source in mem_map: print(r, source)
+</code></pre>
+<p>Sample output:</p>
+<pre><code>[ds:0x1000; 1280] from r1
+[ds:0x1500; 2816] from r1, from r2
+[ds:0x2000; 1280] from r2
+[ds:0x5000; 4096] from r3
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="listing-ossi.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="handles.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
-                            </a>
-                            <a rel="next" href="taint.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
                     </nav>
@@ -178,11 +240,8 @@ for ctx_range in server.trace.filter(processes, reven2.filter.RingPolicy.R3Only)
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="listing-ossi.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="handles.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
-                    </a>
-                    <a rel="next" href="taint.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
 
