--- a/server.html
+++ b/server.html
@@ -3,14 +3,13 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Connecting to a server - REVEN API Cookbook</title>
+        <title>Connecting to a server - Reven API Cookbook</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
         <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="bulma.css">
         <link rel="stylesheet" href="css/variables.css">
         <link rel="stylesheet" href="css/general.css">
@@ -76,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html" class="active"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="server.html" class="active"><strong aria-hidden="true">2.</strong> Connecting to a server</a></li><li class="chapter-item expanded "><a href="iterating.html"><strong aria-hidden="true">3.</strong> Manipulating transitions and contexts</a></li><li class="chapter-item expanded "><a href="context-read.html"><strong aria-hidden="true">4.</strong> Reading values or structs from registers or memory</a></li><li class="chapter-item expanded "><a href="start-end.html"><strong aria-hidden="true">5.</strong> Moving to the beginning, end of a function</a></li><li class="chapter-item expanded "><a href="search-calls.html"><strong aria-hidden="true">6.</strong> Searching for function calls</a></li><li class="chapter-item expanded "><a href="crash.html"><strong aria-hidden="true">7.</strong> Looking for a crash</a></li><li class="chapter-item expanded "><a href="memhist.html"><strong aria-hidden="true">8.</strong> Finding out when a memory location is accessed</a></li><li class="chapter-item expanded "><a href="call-values.html"><strong aria-hidden="true">9.</strong> Displaying the value of arguments and return value of a call</a></li><li class="chapter-item expanded "><a href="search-values.html"><strong aria-hidden="true">10.</strong> Searching for values in memory</a></li><li class="chapter-item expanded "><a href="listing-ossi.html"><strong aria-hidden="true">11.</strong> Listing the processes, binaries in the trace</a></li><li class="chapter-item expanded "><a href="filters.html"><strong aria-hidden="true">12.</strong> Focusing on a portion of the trace</a></li><li class="chapter-item expanded "><a href="taint.html"><strong aria-hidden="true">13.</strong> Following the dataflow</a></li><li class="chapter-item expanded "><a href="jupyter.html"><strong aria-hidden="true">14.</strong> Displaying data nicely in Jupyter notebooks</a></li><li class="chapter-item expanded "><a href="tabular.html"><strong aria-hidden="true">15.</strong> Exporting tabular data to work with reporting tools</a></li><li class="chapter-item expanded "><a href="bookmarks.html"><strong aria-hidden="true">16.</strong> Managing bookmarks</a></li><li class="chapter-item expanded "><a href="instruction-semantics.html"><strong aria-hidden="true">17.</strong> Finding more about the semantics of an instruction</a></li><li class="chapter-item expanded "><a href="handles.html"><strong aria-hidden="true">18.</strong> Accessing handles</a></li><li class="chapter-item expanded "><a href="memory-ranges.html"><strong aria-hidden="true">19.</strong> Managing ranges of memory</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -105,11 +104,11 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">REVEN API Cookbook</h1>
+                    <h1 class="menu-title">Reven API Cookbook</h1>
 
                     <div class="right-buttons">
-                        <a href="https://www.tetrane.com" title="Go to main site" aria-label="Go to main site">
-                            <img src=".//static/logo.png" alt="Tetrane logo" style="width:28px;height:28px;vertical-align:middle"></i>
+                        <a href="https://www.eshard.com" title="Go to eShard" aria-label="Go to eShard">
+                            <img src=".//static/eshard_icon.svg" alt="eShard logo" style="width:40px;height:40px;vertical-align:middle"></i>
                         </a>
                         <a href="print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
@@ -146,7 +145,7 @@
     </div>
 <div class="message-body content">
 <p>
-    The other examples of this book assume that your Python environment contains a <code>server</code> variable that represents a connection to a REVEN server.
+    The other examples of this book assume that your Python environment contains a <code>server</code> variable that represents a connection to a Reven server.
 </p>
 </div>
 </div>
@@ -156,7 +155,7 @@
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.0.0</span>
     </div>
 </div>
@@ -172,7 +171,7 @@ server = reven2.RevenServer(hostname, port)
 <div class="field is-grouped is-grouped-multiline">
 <div class="control">
     <div class="tags has-addons">
-        <span class="tag is-dark">REVEN</span>
+        <span class="tag is-dark">Reven</span>
         <span class="tag is-info">v2.3.0</span>
     </div>
 </div>
@@ -193,7 +192,7 @@ server = reven2.RevenServer(hostname, port)
 <p>You can use a feature of the Workflow API to get a connection to a server from the scenario's name, rather than by specifying a port.</p>
 <p>From the CLI:</p>
 <pre><code class="language-py">from reven2.preview.project_manager import ProjectManager
-pm = ProjectManager(&quot;http://localhost:8880&quot;)  # URL to the REVEN Project Manager
+pm = ProjectManager(&quot;http://localhost:8880&quot;)  # URL to the Reven Project Manager
 connection = pm.connect(&quot;cve-2016-7255&quot;)  # No need to specify &quot;13370&quot;
 server = connection.server
 </code></pre>
@@ -204,6 +203,63 @@ server = connection.server
 </code></pre>
 <p>This is useful, as the server port will typically change at each reopening of the scenario, while the scenario name remains the same.</p>
 <p>If no server is open for that particular scenario when executing the <code>ProjectManager.connect</code> method call, then a new one will be started.</p>
+<h1 id="checking-server-information"><a class="header" href="#checking-server-information">Checking server information</a></h1>
+<h2 id="getting-basic-server-information"><a class="header" href="#getting-basic-server-information">Getting basic server information</a></h2>
+<pre><code class="language-py">print(f&quot;Scenario '{server.scenario_name}' on {server.host}:{server.port}&quot;)
+</code></pre>
+<p>Sample output:</p>
+<pre><code>Scenario 'CVE-2021-21166-Chrome' on localhost:13370
+</code></pre>
+<h2 id="server-os-information"><a class="header" href="#server-os-information">Server OS information</a></h2>
+<div class="bulma">
+<div class="field is-grouped is-grouped-multiline">
+<div class="control">
+    <div class="tags has-addons">
+        <span class="tag is-dark">Reven</span>
+        <span class="tag is-info">v2.12.0</span>
+    </div>
+</div>
+<div class="control">
+    <div class="tags has-addons">
+        <span class="tag is-dark">OS</span>
+        <span class="tag is-primary"><span class="icon"><i class="fa fa-windows" aria-hidden="true"></i></span>
+<span>Windows 64-bit</span></span>
+    </div>
+</div>
+<div class="control">
+    <div class="tags has-addons">
+        <span class="tag is-dark">OS</span>
+        <span class="tag is-primary"><span class="icon"><i class="fa fa-linux" aria-hidden="true"></i></span>
+<span>Linux 64-bit</span></span>
+    </div>
+</div>
+</div>
+</div>
+<p>Starting with Reven 2.12, the server provides information on the OS of the running scenario:</p>
+<pre><code class="language-py">print(server.ossi.os())
+</code></pre>
+<p>Sample output:</p>
+<pre><code>Windows x64 10.0 (Windows 10)
+</code></pre>
+<h3 id="checking-that-we-are-on-the-supported-perimeter-of-the-current-script"><a class="header" href="#checking-that-we-are-on-the-supported-perimeter-of-the-current-script">Checking that we are on the supported perimeter of the current script</a></h3>
+<pre><code class="language-py">server.ossi.os().expect(reven2.ossi.Os(windows_version=reven2.ossi.WindowsVersion.Windows7),
+                        reven2.ossi.Os(windows_version=reven2.ossi.WindowsVersion.Windows8))
+</code></pre>
+<p>Sample output:</p>
+<pre><code>reven2.ossi.os.OsError: Got 'Windows x64 10.0.18362 (Windows 10)', expected one of: 'Windows 7', 'Windows 8'
+</code></pre>
+<h3 id="doing-something-different-depending-on-the-os"><a class="header" href="#doing-something-different-depending-on-the-os">Doing something different depending on the OS</a></h3>
+<pre><code class="language-py">os = server.ossi.os()
+os.expect(reven2.ossi.Os(family=reven2.ossi.OsFamily.Linux))
+if os.kernel_version.major == 4:
+   # do something with a kernel 4.x
+   pass
+elif os.kernel_version.major == 5:
+   # do something with a kernel 5.x
+   pass
+else:
+   raise reven2.ossi.OsError(got=os, message=&quot;Expected kernel major version 4 or 5&quot;)
+</code></pre>
 
                     </main>
 
